fixed alignment issues.

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,6 +17,7 @@
   span {
     font-size: 1.5rem;
     font-weight: 700;
+    text-align: center;
   }
 
   .signUp {
